# ai-compiler-lab

./: .gitignore  README.md
llvm-passes/: CMakeLists.txt
llvm-passes/MatMulToNeon/: MatMulToNeon.cpp  README.md
llvm-passes/MlirToMatMul/: CMakeLists.txt  MlirToMatMul.cpp
llvm-passes/StrengthReduceLoop/: CMakeLists.txt
llvm-passes/test/CPP/: bench_mat4x4.cpp  kernel.s  lowered_clean.ll  mat4x4_16acc.cpp  mat4x4_16acc_test.cpp  mat_test.cpp
qu4d-mlir/: CMakeLists.txt  README.md
qu4d-mlir/include/: CMakeLists.txt
qu4d-mlir/include/qu4d/IR/: CMakeLists.txt  Qu4dDialect.h  Qu4dDialect.td  Qu4dOps.h  Qu4dOps.td
qu4d-mlir/include/qu4d/Transforms/: Passes.h
qu4d-mlir/lib/: CMakeLists.txt
qu4d-mlir/lib/IR/: Qu4dDialect.cpp  Qu4dOps.cpp
qu4d-mlir/lib/Transforms/: LowerMatmul4x4.cpp  Passes.cpp  Qu4dFromLinalg.cpp
qu4d-mlir/test/: CMakeLists.txt
qu4d-mlir/test/qu4d/: bench_mat4x4.cpp  input.mlir  mat4x4_16acc_test.cpp  qu4d_from_linalg.mlir  qu4d_matmul4x4_canonicalize.mlir  qu4d_matmul4x4_verify.mlir
qu4d-mlir/tools/: CMakeLists.txt
qu4d-mlir/tools/qu4d-opt/: CMakeLists.txt  qu4d-opt.cpp
